# rl4co

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  =0.1.1  CITATION.cff  CNAME  LICENSE  README.md  README_backup.md  collect_baseline.py  gnn.py  index.html  mkdocs.yml  objects.inv  ppo.py  pyproject.toml  requirements.txt  run.py  run_baselines.py  setup.py  sitemap.xml  train_am.py  x-ppo.ipynb
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  pull_request.md
.github/workflows/: black.yml  deploy-docs.yaml  linting.yml  publish.yaml  tests.yml
README_backup/: README_backup.md  index.html
configs/: eval.yaml  main.yaml  train.yaml
configs/callbacks/: default.yaml  learning_rate_monitor.yaml  model_checkpoint.yaml  speed_monitor.yaml
configs/data/: shi.yaml
configs/debug/: default.yaml
configs/env/: cvrp.yaml  cvrpmvc.yaml  cvrptw.yaml  default.yaml  dpp.yaml  ffsp.yaml  fjsp.yaml  flp.yaml  jssp.yaml  mcp.yaml  mdcpdp.yaml  mdpp.yaml  mtsp.yaml  op.yaml  pctsp.yaml  pdp.yaml  sdvrp.yaml  spctsp.yaml  svrp.yaml  tsp.yaml
configs/experiment/: README.md  base.yaml  index.html  multistep_linear.yaml  nn.yaml  transformer.yaml  vanilla_gru.yaml
configs/hydra/: default.yaml
configs/logger/: none.yaml  wandb.yaml
configs/model/: am-gfn.yaml  am-ppo.yaml  am.yaml  deepaco.yaml  default.yaml  gfacs.yaml  glop.yaml  ham.yaml  hetgnn.yaml  l2d.yaml  matnet.yaml  mdam.yaml  multistep_linear.yaml  nn.yaml  polynet.yaml  pomo.yaml  ptrnet.yaml  symnco.yaml  transformer.yaml  vanilla_gru.yaml
configs/paths/: default.yaml
configs/task/: dynamics.yaml  rl.yaml  rl4co.yaml
configs/trainer/: default.yaml
data/op/: op_const20_test_seed1234.npz  op_const20_val_seed4321.npz  op_dist20_test_seed1234.npz  op_dist20_val_seed4321.npz  op_unif20_test_seed1234.npz  op_unif20_val_seed4321.npz
data/pctsp/: pctsp20_test_seed1234.npz  pctsp20_val_seed4321.npz
data/pdp/: pdp20_test_seed1234.npz  pdp20_val_seed4321.npz  pdp50_test_seed1234.npz  pdp50_val_seed4321.npz
data/tsp/: tsp20_test_seed1234.npz  tsp20_val_seed4321.npz  tsp50_test_seed1234.npz  tsp50_val_seed4321.npz
data/vrp/: sol_vrp100_test_seed1234.npz.npz  sol_vrp100_test_seed1234.npz.txt  sol_vrp100_val_seed4321.npz.npz  sol_vrp100_val_seed4321.npz.txt  sol_vrp20_test_seed1234.npz.npz  sol_vrp20_test_seed1234.npz.txt  sol_vrp20_val_seed4321.npz.npz  sol_vrp20_val_seed4321.npz.txt  sol_vrp50_test_seed1234.npz.npz  sol_vrp50_test_seed1234.npz.txt  sol_vrp50_val_seed4321.npz.npz  sol_vrp50_val_seed4321.npz.txt  vrp20_test_seed1234.npz  vrp20_val_seed4321.npz
docs/: README.md  conf.py  hooks.py  index.html  index.md  requirements.txt
docs/environments/: basic.md
docs/js/: autolink.js  katex.js
docs/overrides/: fancylogo.txt  main.html
docs/stylesheets/: extra.css  mkdocstrings.css
examples/: 1-quickstart copy.ipynb  1-quickstart.ipynb  2-full-training.ipynb  2b-train-simple.py  2d-meta_train.py  3-creating-new-env-model.ipynb  README.md  index.html
examples/1-quickstart/: index.html
examples/2-full-training/: index.html
examples/3-creating-new-env-model/: index.html
examples/advanced/: 1-hydra-config.ipynb  2-flash-attention-2.ipynb  3-local-search.ipynb  3-unbached-envs.ipynb  README.md  index.html
examples/datasets/: 1-test-on-tsplib.ipynb  2-test-on-cvrplib.ipynb  README.md  index.html
examples/modeling/: 1-change-encoder.ipynb  1-decoding-strategies.ipynb  2-search-methods.ipynb  2-transductive-methods.ipynb  3-change-encoder.ipynb  3-decoding-strategies.ipynb  README.md  index.html
examples/other/: 1-mtvrp.ipynb  2-scheduling.ipynb  3-data-generator-distributions.ipynb  3-glop.ipynb  README.md  index.html
ncobench/: eval.py  train.py
ncobench/data/: dataset.py
ncobench/envs/: __init__.py  dpp.py  tsp.py  utils.py
ncobench/models/: __init__.py  am.py  cnn.py  mlp.py
ncobench/nn/: components.py  graph.py  layers.py
ncobench/rl/: double_dqn.py  dqn.py
ncobench/tasks/: rl.py
ncobench/utils/: __init__.py  downloader.py  helpers.py  instantiators.py  lightning.py  logging_utils.py  ops.py  param_grouping.py  rich_utils.py  test_utils.py  utils.py
notebooks/: 1-quickstart.ipynb  2-matnet-atsp.ipynb  2-test-cvrptw.ipynb  cvrp-dev.py  unbatched_jssp.ipynb
notebooks/am/: 0. optimizing-attention-model.ipynb  2.am.ipynb  3.lightning-am.ipynb  attention.py  graph_encoder.py  reinforce_baselines.py  utils.py
notebooks/am_old_tests/: 1.environment_import.ipynb  2.am.ipynb  3.lightning-am.ipynb  3b.lightning-am-MOD.ipynb  3c.lightning-am-v2.ipynb  graph_encoder.py  reinforce_baselines.py
notebooks/atsp/: 1.environment-creation.ipynb  2.load.ipynb
notebooks/attention_model/: 1a.am-lightning.ipynb  1a.attention-model-lightning.ipynb  1b.attention-model-lightning-clean copy.ipynb  1b.refactor.ipynb  1c.code-refactoring.ipynb  1c.refactor_cleaned.ipynb  1c.rollout(cleaner but slower).ipynb  2.am-ligthning-clean.ipynb  2b.clean.ipynb  reinforce_baselines.py
notebooks/cvrptw/: dev.ipynb  run.py
notebooks/cvrptw random policy/: 2-cvrptw-random-policy.ipynb  temp_dev.ipynb  temp_dev.py
rl4co/: __init__.py
rl4co/envs/routing/cvrp/HGS-CVRP/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
rl4co/envs/routing/cvrp/HGS-CVRP/Program/: AlgorithmParameters.cpp  AlgorithmParameters.h  C_Interface.cpp  C_Interface.h  CircleSector.h  Genetic.cpp  Genetic.h  Individual.cpp  Individual.h  InstanceCVRPLIB.cpp  InstanceCVRPLIB.h  LocalSearch.cpp  LocalSearch.h  Params.cpp  Params.h  Population.cpp  Population.h  Split.cpp  Split.h  commandline.h  main.cpp
script/: README.md  eval_vrplib.py
scripts/: collect_runs.py  collect_runs2.py  eval_methods.py  eval_methods_pareto.py  launch_mdpp.sh  launch_pareto-tsp20.sh  launch_pareto-tsp50.sh  launch_pareto.sh  sample_efficiency.sh  transfer.sh
search/: search_index.json
tests/: conftest.py  test_datamodules.py  test_envs.py  test_eval.py  test_models.py  test_ops.py  test_policy.py  test_tasks.py  test_train.py  test_training.py  test_utils.py
(+854 files in other folders)
